# sample-work

./: .editorconfig  README.md
C/: Doxyfile  README.md
C++/: README.md
C++/hvac-simulator/: Doxyfile
C++/hvac-simulator/include/: BacServer.h  SiteSim.h  WebServer.h  main.h
C++/hvac-simulator/src/: BacServer.cpp  SiteSim.cpp  WebServer.cpp  main.cpp
C++/serial/: CMakeLists.txt  main.cpp
C++/usb_data_tools/: CMakeLists.txt  data_tools.h  generator.cpp  interpreter.cpp  main.cpp  main.h
C++/usb_device_dummy/: CMakeLists.txt  generator.cpp  generator.h  main.cpp  main.h  proc.cpp  proc.h
C/bmp280_pio_i2c/: CMakeLists.txt  interrupts.c  main.c  own_i2c.c  own_i2c.h  own_i2c.pio
C/bmp280_pio_spi/: CMakeLists.txt  interrupts.c  interrupts.h  main.c  own_spi.c  own_spi.h  own_spi.pio
C/logic_analyser/: CMakeLists.txt  logic_analyser.c  logic_analyser.h  main.c  sampling_cutter.py
C/rpi4_poweroff/: CMakeLists.txt  main.c
C/usb_host_low/: Kbuild  build.sh  usb_host_low.c
C/utilities/: CMakeLists.txt  utilities.c  utilities.h
Java/: README.md
Java/manga-reader/: pom.xml
Java/manga-reader/app/: pom.xml
Java/manga-reader/app/src/main/java/: module-info.java
Java/manga-reader/app/src/main/java/my/yagitan/mangareader/app/: App.java
Java/manga-reader/imgproc/: pom.xml
Java/manga-reader/imgproc/src/main/java/: module-info.java
Java/manga-reader/imgproc/src/main/java/my/yagitan/mangareader/imgproc/: IO.java  Transform.java
Java/manga-reader/imgproc/src/test/java/my/yagitan/mangareader/imgproc/: TransformTest.java
Java/manga-reader/ui/: pom.xml
Java/manga-reader/ui/src/main/java/: module-info.java
Java/manga-reader/ui/src/main/java/my/yagitan/mangareader/ui/: Enums.java  EvtHandlers.java  MainWindow.java  MenuBar.java
JavaScript/: README.md
JavaScript/usb_web_backend/: CMakeLists.txt  eslint.config.js  index.js  jsdoc.config.json  package.json  swaggerDefinition.yaml  utils.js
JavaScript/usb_web_backend/model/: channel.js  logicAnalyser.js
JavaScript/usb_web_backend/routes/: configuration.js  control.js
JavaScript/usb_web_backend/wasm_cpp/: interface.js  main.cpp  test.js
JavaScript/usb_web_frontend/: index.html  package.json  vite.config.js
JavaScript/usb_web_frontend/src/: App.vue  CollapsibleSection.vue  ConfigItem.vue  LineGraph.vue  LineGraphData.js  LineGraphUi.js  states.js  utils.js
Python/: README.md  tcp_client.py  tcp_server.py  udp_rtp.py
Ruby/: README.md  wifi-manager.rb
